add swagger to Dashnoard
